# vip-ivp

./: .gitignore  README.md  install_package_locally.bat  main.py  pyproject.toml  requirements.txt  setup.py  variable_exploration.py
.github/workflows/: python-app.yml  python-publish.yml
demos/: ballistics.py  boucing_ball.ipynb  bouncing_ball.py  clutch.py  deep_learning.py  explore_mass-spring-damper.py  explore_pid_room_temperature.py  exponential_decay.py  mass-spring-damper.py  numerical_errors_of_differentiation.py  tutorial.py
demos/in_progress/: ballistics.py  clutch.py  numerical_errors_of_differentiation.py
doc/: README.md  build_api_doc.bat  feature_list.md
doc/Sphinx-docs/: conf.py  index.rst  modules.rst  vip_ivp.rst
doc/dev/: README.md
doc/website/: docusaurus.config.ts  package-lock.json  package.json
doc/website/blog/: 2025-06-06-hello-world.md  authors.yml
doc/website/docs/: debug.md  events.md  exploring.md  installation.md  overview.md  solving.md  (+3 more)
experimental/physics/: _test_mechanical.py  bonds.py  mechanical.py
src/vip_ivp/: __init__.py  api.py  base.py  config.py  solver.py  solver_utils.py  temporal_var.py  utils.py
tests/: _test_debug_expressions.py  conftest.py  test_debug_expressions.py  test_explore.py  test_invalid_systems.py  test_known_solutions.py  test_patterns.py  test_performance.py  test_utils.py  test_valid_systems.py
tests/application_services/: test_api.py  test_variables.py
tests/domain/: test_system.py  test_variables.py
tests/physics/: mechanical.py
visualisation_app/: get_ast.py  parse.py  server.py
(+27 files in other folders)
