[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vip-ivp"
version = "0.2.0"
description = "Build and solve ODEs with a beautiful syntax."
readme = "README.md"
requires-python = ">=3.10"
license =  "MIT"
authors = [
  { name = "Nathan Gripon", email = "n.gripon@gmail.com" }
]

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/ngripon/vip-ivp"
Issues = "https://github.com/ngripon/vip-ivp/issues"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]